...
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Log In">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="22"/>
                                </buttonConfiguration>
...
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Sign Up">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="22"/>
                                </buttonConfiguration>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profil" image="person.fill" catalog="system" id="Sbn-GH-4d0"/>
                    <navigationItem key="navigationItem" id="8Cb-ZR-QNq">
                        <barButtonItem key="backBarButtonItem" title="Nazad" id="c0x-8z-Zk6"/>
                    </navigationItem>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
...
                                                                </constraints>
                                                            </imageView>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b4A-7d-JY4">
                                                                <rect key="frame" x="65" y="13.999999999999998" width="280" height="26.333333333333329"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Zaboravili ste šifru?">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="18"/>
                                </buttonConfiguration>
...
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T4e-Mj-DCv">
                                <rect key="frame" x="16" y="646.33333333333337" width="361" height="37"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ime" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GHs-uE-7Wa">
                                                        <rect key="frame" x="16" y="67" width="361" height="36"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Broj Telefona" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rep-R5-3vK">
                                                        <rect key="frame" x="16" y="187" width="361" height="36"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Adresa" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zi4-mC-dFe">
                                                        <rect key="frame" x="16" y="307" width="361" height="36"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" secureTextEntry="YES"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Potvrdi password" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yNR-po-Uzj">
                                                        <rect key="frame" x="16" y="426" width="361" height="35"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                                        </connections>
                                                    </button>
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Prezime" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XpA-Yh-kGp">
                                                        <rect key="frame" x="16" y="127" width="361" height="36"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Pošalji">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="22"/>
