...
            basketTableView.beginUpdates()
            MyVariables.foodManager.removeFromBasket(index: indexPath.row)
        }
    }
    
    func tableView(_ tableView: UITableView, titleForDeleteConfirmationButtonForRowAt indexPath: IndexPath) -> String? {
        return "Izbaci iz korpe"
    }
}

extension BasketViewController : FoodManagerDelegate {
    
    func didMakeOrder(_ foodManager: FoodManager) {
...
