...
        FirebaseAuth.Auth.auth().createUser(withEmail: userToCreate.email, password: password, completion: { result, error in
            if error != nil {
                let errCode = AuthErrorCode(_nsError: error! as NSError)
                var errorMsg = ""
                switch errCode.code {
                case .accountExistsWithDifferentCredential, .credentialAlreadyInUse, .emailAlreadyInUse:
                    errorMsg = "Profil sa ovim email-om već postoji!"
                default:
                    errorMsg = "Neuspješan Sign Up!"
                }
                self.delegate?.didFailWithError(error: errorMsg)
            }
            else {
...
                let errCode = AuthErrorCode(_nsError: error! as NSError)
                var errorMsg = ""
                switch errCode.code {
                case .userNotFound:
                    errorMsg = "Korisnik nije pronađen. Prvo kreirajte profil!"
                case .wrongPassword:
                    errorMsg = "Šifra neispravna!"
                default:
                    errorMsg = "Neuspješan Log In!"
                }
                self.delegate?.didFailWithError(error: errorMsg)
            }
            else {
...
